Move Header Menu into the icon bar as an icon.

--- a/css/icons.vert.css
+++ b/css/icons.vert.css
@@ -3,6 +3,10 @@
 #img-controls {
   top: #{position[i++]}px;
 }
+/* Main Menu */
+#main-menu {
+  top: #{position[i++]}px;
+}
 /* 4chan X Options */
 #appchanOptions {
   top: #{position[i++]}px;
@@ -60,6 +64,7 @@ div.navLinks > a:first-of-type::after {
 #boardNavDesktopFoot::after,
 #globalMessage::after,
 #img-controls,
+#main-menu,
 #fappeTyme,
 #{if _conf["Slideout Watcher"] then "#watcher::after," else ""}
 body > a[style="cursor: pointer; float: right;"]::after,
