--- a/css/icons.base.css
+++ b/css/icons.base.css
@@ -7,6 +7,7 @@ body > div.navLinks > a:first-of-type::after,
 #boardNavDesktopFoot::after,
 body > a[style="cursor: pointer; float: right;"]::after,
 #img-controls,
+#main-menu,
 #catalog::after,
 #fappeTyme {
   z-index: 18;
@@ -22,6 +23,7 @@ body > div.navLinks > a:first-of-type,
 #{if Conf['Slideout Watcher'] then '#watcher,' else ''}
 #{if Conf['Announcements'] is 'slideout' then '#globalMessage,' else ''}
 #boardNavDesktopFoot,
+#main-menu,
 body > a[style="cursor: pointer; float: right;"],
 #catalog {
   z-index: 16;
@@ -76,6 +78,7 @@ body > a[style="cursor: pointer; float: right;"]::after {
 #img-controls:hover,
 #navlinks a:hover,
 #appchanOptions:hover,
+#main-menu:hover,
 #navtopright .exlinksOptionsLink:hover::after,
 #qr #qrtab,
 #watcher:hover::after,
