--- a/css/icons.horz.css
+++ b/css/icons.horz.css
@@ -27,6 +27,10 @@ body > a[style="cursor: pointer; float: right;"]::after {
 #img-controls {
   #{align}: #{position[i++]}px;
 }
+/* Main Menu */
+#main-menu {
+  #{align}: #{position[i++]}px;
+}
 /* 4chan Catalog */
 #catalog::after {
   #{align}: #{position[i++]}px;
@@ -62,6 +66,7 @@ div.navLinks > a:first-of-type::after {
 #watcher::after,
 #globalMessage::after,
 #img-controls,
+#main-menu,
 #fappeTyme,
 div.navLinks > a:first-of-type::after,
 #catalog::after,
