--- a/css/layout.css
+++ b/css/layout.css
@@ -145,7 +145,7 @@ hr {
   border-left: 6px solid transparent;
   margin: 1.5px;
 }
-/* Navigation */
+/* Header */
 #boardNavDesktop {
   z-index: 6;
   border-width: 1px;
@@ -246,6 +246,31 @@ else "
 .close {
   float: right;
 }
+/* Main Menu */
+#main-menu {
+  margin: 0;
+  border: 2px solid;
+  border-radius: 10px;
+  height: 14px;
+  width: 14px;
+  #{Style.sizing}: border-box;
+  border-color: rgb(130,130,130);
+  color: rgb(130,130,130);
+}
+#main-menu::after {
+  content: '';
+  font-size: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  #{agent}transform: translate(-60%, -50%);
+  display: block;
+  border-top: 5px solid rgb(130, 130, 130);
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  width: 7px;
+  #{Style.sizing}: border-box;
+} 
 /* Pagination */
 .pagelist {
   border-width: 1px;
