Don't float the show-announcement button.

--- a/css/style.css
+++ b/css/style.css
@@ -374,8 +374,7 @@ a[href="javascript:;"] {
 :root.hide-announcement #globalMessage {
   display: none;
 }
-a.hide-announcement,
-a.show-announcement {
+a.hide-announcement {
   float: left;
 }
 
