Add text cursor to file input in QR

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -662,6 +662,9 @@ input.field.tripped:not(:hover):not(:focus) {
   overflow: hidden;
   padding: 2px 1px 0;
 }
+#qr-filename-container:hover {
+  cursor: text;
+}
 #qr-filerm {
   position: relative;
   right: 14px;
