Move Catalog Links into the Header Menu.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,6 +194,10 @@ a[href="javascript:;"] {
 .expand-all-shortcut {
   opacity: .45;
 }
+#settings-container {
+  float: right;
+}
+#navbotright,
 #navtopright {
   display: none;
 }
