--- a/src/css/style.css
+++ b/src/css/style.css
@@ -800,6 +800,8 @@ a:only-of-type > .remove {
   display: inline-block;
   position: relative;
   cursor: pointer;
+}
+.menu-button i {
   border-top:   6px solid;
   border-right: 4px solid transparent;
   border-left:  4px solid transparent;
