--- a/src/css/style.css
+++ b/src/css/style.css
@@ -484,7 +484,7 @@ a.hide-announcement {
 /* Quote Threading */
 .threadContainer {
   margin-left: 20px;
-  border-left: 1px solid rgba(0,0,0,0.5);
+  border-left: 1px solid rgba(128,128,128,.3);
 }
 .threadOP {
   clear: both;
@@ -521,6 +521,10 @@ a.hide-announcement {
   max-height: 100%;
   max-width: 75%;
   padding-bottom: 16px;
+}
+.fappeTyme  .thread > .noFile,
+.fappeTyme .threadContainer > .noFile {
+  display: none;
 }
 
 /* Index/Reply Navigation */
