toggle-header-bar -> scroll-marker, also update CSS

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,22 +145,22 @@ a[href="javascript:;"] {
   -webkit-transform: translateY(100%);
   transform: translateY(100%);
 }
-#toggle-header-bar {
+#scroll-marker {
   left: 0;
   right: 0;
   height: 10px;
   position: absolute;
 }
-#boardNavDesktop #toggle-header-bar {
+#header-bar #scroll-marker {
   display: none;
 }
-.fixed #boardNavDesktop #toggle-header-bar {
+.fixed #header-bar #scroll-marker {
   display: block;
 }
-.fixed.top boardNavDesktop #toggle-header-bar {
+.fixed.top #header-bar #scroll-marker {
   top: 100%;
 }
-.fixed.bottom #boardNavDesktop #toggle-header-bar {
+.fixed.bottom #header-bar #scroll-marker {
   bottom: 100%;
 }
 #header-bar a:not(.entry) {
