--- a/src/css/icons.horz.css
+++ b/src/css/icons.horz.css
@@ -78,7 +78,7 @@ body > a[style="cursor: pointer; float: right;"]::after {
 #boardNavDesktopFoot {
   top: 16px !important;
 }
-#{if _conf['Boards Navigation'] is 'top' or _conf['Boards Navigation'] is 'sticky top' then '#header-bar' else if _conf['Pagination'] is 'top' or _conf['Pagination'] is 'sticky top' then '.pagelist'} {
+#{if _conf['Boards Navigation'] is 'Top' or _conf['Boards Navigation'] is 'Sticky top' then '#header-bar' else if _conf['Pagination'] is 'top' or _conf['Pagination'] is 'sticky top' then '.pagelist'} {
   #{if _conf['4chan SS Navigation']
     "padding-#{align}: #{iconOffset}px;"
   else
