--- a/css/style.css
+++ b/css/style.css
@@ -379,6 +379,9 @@ a[href="javascript:;"] {
 a.hide-announcement {
   float: left;
 }
+#toggleMsgBtn {
+  display: none;
+}
 
 /* Unread */
 #unread-line {
