--- a/src/css/style.css
+++ b/src/css/style.css
@@ -238,7 +238,7 @@ a[href="javascript:;"] {
 .notification > .close {
   padding: 6px;
   top: 0;
-  right: 0;
+  right: 5px;
   position: absolute;
 }
 .message {
