Remove selectadvanced lol

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -646,8 +646,7 @@ input.field.tripped:not(:hover):not(:focus) {
   width: 100%;
   margin: 1px 0 0;
 }
-.field,
-.selectadvanced {
+.field {
   -moz-box-sizing: border-box;
   margin: 0px;
   padding: 2px 4px 3px;
