--- a/src/css/burichan.css
+++ b/src/css/burichan.css
@@ -8,11 +8,11 @@
 }
 
 /* Header */
-:root.burichan #header-bar {
+:root.burichan #header-bar, :root.burichan #header-bar #notifications {
   font-size: 11pt;
   color: #89A;
 }
-:root.burichan #header-bar a {
+:root.burichan #header-bar a, :root.burichan #header-bar #notifications a {
   color: #34345C;
 }
 
