Remove those awful pointer events

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -403,6 +403,9 @@ a.hide-announcement {
 .new {
   color: limegreen;
 }
+#update-status, #update-timer, #post-count, #file-count {
+  pointer-events: none;
+}
 
 /* Thread Watcher */
 #watcher {
