--- a/src/css/style.css
+++ b/src/css/style.css
@@ -170,6 +170,10 @@ a[href="javascript:;"] {
   text-decoration: none;
   padding: 1px;
 }
+#header-bar input {
+  margin: 0;
+  vertical-align: bottom;
+}
 #shortcuts:empty {
   display: none;
 }
