--- a/src/css/style.css
+++ b/src/css/style.css
@@ -302,7 +302,7 @@ a[href="javascript:;"] {
   right: 5px;
   bottom: 5px;
   left: 5px;
-  padding-top: 10px;
+  padding-right: 5px;
 }
 .sections-list {
   padding: 0 3px;
