--- a/src/css/style.css
+++ b/src/css/style.css
@@ -496,7 +496,7 @@ a.hide-announcement {
 .qphl {
   outline: 2px solid rgba(216, 94, 49, .7);
 }
-.yourPost .reply {
+.highlight-own .yourPost>.reply {
   border-left: 2px solid rgba(221,0,0,.5);
 }
 /* Quote Threading */
