Fix thread watcher dragging

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -65,11 +65,9 @@ a[href="javascript:;"] {
 #fourchanx-settings,
 #qp, #ihover,
 #navlinks, .fixed #header-bar,
+#watcher,
 #qr {
   position: fixed;
-}
-#watcher {
-  position: absolute;
 }
 #fourchanx-settings {
   z-index: 999;
