Add gist embedding

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -924,3 +924,7 @@ a:only-of-type > .remove {
   background: transparent url('data:image/png;base64,<%= grunt.file.read("src/General/img/links/pastebin.png",    {encoding: "base64"}) %>') center left no-repeat!important;
   padding-left: 18px;
 }
+.linkify.gist {
+  background: transparent url('data:image/png;base64,<%= grunt.file.read("src/General/img/links/gist.png",    {encoding: "base64"}) %>') center left no-repeat!important;
+  padding-left: 18px;
+}
