--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -935,3 +935,7 @@ a:only-of-type > .remove {
   background: transparent url('data:image/png;base64,<%= grunt.file.read("src/General/img/links/image.png",    {encoding: "base64"}) %>') center left no-repeat!important;
   padding-left: 18px;
 }
+.linkify.InstallGentoo {
+  background: transparent url('data:image/png;base64,<%= grunt.file.read("src/General/img/links/installgentoo.png",    {encoding: "base64"}) %>') center left no-repeat!important;
+  padding-left: 18px;
+}
