Borrow previous and next buttons from OneeChan.

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -11,7 +11,11 @@
 #togglePostForm,
 .boardBanner > div,
 .mobile,
+.next form,
+.next span,
 .postingMode,
+.prev form,
+.prev span,
 .riced,
 .sideArrows,
 .stylechanger,
