Small margin change for threadContainers

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -733,7 +733,7 @@ hide: "
 }
 .post,
 .summary,
-.thread > .threadContainer {
+.threadContainer {
   margin-bottom: #{Style.replyMargin}px;
 }
 .replyContainer:last-of-type .post {
