--- a/src/General/css/theme.css
+++ b/src/General/css/theme.css
@@ -63,10 +63,7 @@ html {
   #{Style.filter theme["Text"], theme["Input Background"]}
 }
 #boardTitle,
-#prefetch,
-#showQR,
-#{unless _conf["Post Form Decorations"] then '#spoilerLabel,' else ''}
-#thread-stats {
+#{unless _conf["Post Form Decorations"] then '#spoilerLabel' else ''} {
   text-shadow:
      1px  1px 0 #{backgroundC},
     -1px -1px 0 #{backgroundC},
