--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -505,7 +505,8 @@ a.hide-announcement {
 .qphl {
   outline: 2px solid rgba(216, 94, 49, .7);
 }
-.highlight-own .yourPost>.reply {
+:root.highlight-own .yourPost>.reply,
+:root.highlight-you .quotesYou>.reply {
   border-left: 2px solid rgba(221,0,0,.5);
 }
 /* Quote Threading */
