--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -50,6 +50,9 @@ a[href="javascript:;"] {
 #boardNavDesktop {
   display: none !important;
 }
+a:active {
+  outline: none;
+}
 
 /* 4chan style fixes */
 .opContainer, .op {
