Lets get rid of it when switching tabs, as well.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -50,8 +50,8 @@ a[href="javascript:;"] {
 #boardNavDesktop {
   display: none !important;
 }
-a:active {
-  outline: none;
+a {
+  outline: none !important;
 }
 
 /* 4chan style fixes */
