--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -425,6 +425,7 @@ a.hide-announcement {
   padding-bottom: 3px;
   overflow: hidden;
   white-space: nowrap;
+  min-width: 120px;
 }
 #watcher:not(:hover) {
   max-height: 220px;
