Remove max-height on non-hover, add overflow scrollbar, #60

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -426,9 +426,8 @@ a.hide-announcement {
   overflow: hidden;
   white-space: nowrap;
   min-width: 120px;
-}
-#watcher:not(:hover) {
-  max-height: 220px;
+  max-height: 92%;
+  overflow-y: auto;
 }
 #watcher > .move {
   padding-top: 3px;
