Fix theme and mascot editors. Sorry, they've been broken awhile and no one told me.

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1604,6 +1604,8 @@ article li {
 .section-script fieldset {
   width: 200px;
 }
+#mascotcontent,
+#themecontent,
 .suboptions {
   overflow: auto;
   position: absolute;
